Trying a fix for iframe overflow in ios

--- a/blog/blog.sass
+++ b/blog/blog.sass
@@ -79,7 +79,7 @@
     margin-bottom: 10px
     letter-spacing: .02em
     word-spacing: 0.1em
-    line-height: 1.6
+    line-height: 1.5
     color: white
     // A dark thin outline (4 rules), then a soft shadow below
     text-shadow: 0 1px 1px $shade20, 0 -1px 1px $shade20, 1px 0 1px $shade20, -1px 0 1px $shade20, 0 2px 10px $shade40
